# librtmp

./: CMakeLists.txt  README.md
cmake/: librtmp.pc.in
src/: CMakeLists.txt  amf.c  rtmp.c  rtmp_sys.h
